--- a/views/error/error.hbs
+++ b/views/error/error.hbs
@@ -1,5 +1,6 @@
-<body>
-  <h1>{{message}}</h1>
-  <h2>{{error.status}}</h2>
-  <pre>{{error.stack}}</pre>
-</body>
+<div class="error">
+  <img src="https://images.unsplash.com/photo-1581788927061-ac0e09850ed0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=835&q=80" alt="page not found">
+<br>
+<h2>You got an error please try to refresh and if it still continue contact us</h2>
+<h2>dyplay.boardgamehub@gmail.com</h2>
+ </div>
