--- a/views/error/error401.hbs
+++ b/views/error/error401.hbs
@@ -1,3 +1,6 @@
-<img src="https://images.unsplash.com/photo-1554290712-e640351074bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=665&q=80" alt="sign-in to play">
-<h3>Please Sign in for Special Features</h3>
+<div class="error">
+<img src="https://images.unsplash.com/photo-1533563180007-9f3f0af01970?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="sign-in to play">
+<br>
+<h2>Please Sign in for Special Features</h2>
 <h2>ERROR 401 - Unauthorized</h2>
+</div>
