--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -337,3 +337,15 @@ h3 {
   display: flex;
   flex-direction: row;
 }
+.error {
+  margin: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  img {
+    justify-items: center;
+    width: 300px;
+  }
+}
