--- a/views/error/error404.hbs
+++ b/views/error/error404.hbs
@@ -1,3 +1,6 @@
-<img src="https://images.unsplash.com/photo-1553002401-c0945c2ff0b0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="page not found">
-<h3>The page you are searching was not found.</h3>
-<h2>ERROR 404 - Page Not Found</h2>
+<div class="error">
+<img src="./images/dice.png" alt="page not found">
+<br>
+<h2>The page you are searching was not found.</h2>
+<h2>ERROR 404</h2>
+</div>
