--- a/views/encounter/create.hbs
+++ b/views/encounter/create.hbs
@@ -35,7 +35,7 @@
       </select>
     </div>
 
-    <div >
+    <div class="channel background">
       <button style="font-size: 1em;" class="asideBtn" type="submit"> Submit </button>
     </div>
   </form>
