--- a/views/encounter/edit.hbs
+++ b/views/encounter/edit.hbs
@@ -35,7 +35,7 @@
           </select>
       </div>
       <div class="channel background">
-        <button style="font-size: 1em;" class="map asideBtn" type="submit"> Submit </button>
+        <button style="font-size: 1em;" class="asideBtn" type="submit"> Submit </button>
       </div>
     </form>
 </div>
