--- a/views/channels/create.hbs
+++ b/views/channels/create.hbs
@@ -1,15 +1,18 @@
  
-<h1>Create a New Channel</h1>
-
-<form method="POST" enctype="multipart/form-data">
+<h1>Create a new Channel</h1>
+<section class="sectionComments">
+<div class="content background">
+<form class="form" method="POST" enctype="multipart/form-data">
   <label for="input-name">Channel Name</label>
   <input type="text" name="name" id="input-name" placeholder="Channel Name">
   <label for="description">Desciption</label>
   <textarea name="description" id="description" placeholder=" Desciption of the channel"></textarea>
   <label for="picture">Picture</label>
-  <input type="file" name="picture" id="picture" accept="image/*" multiple />
+  <input style="font-size:1em"class="asideBtn commentArea" type="file" name="picture" id="picture" accept="image/*" multiple />
   <button>Create Channel</button>
 </form>
-<aside>
+</div>
+<aside class="asideBar">
   {{>sidebar}}
 </aside>
+</section>
