--- a/views/channels/posts/create.hbs
+++ b/views/channels/posts/create.hbs
@@ -1,18 +1,20 @@
 <h1>
-  this page is to create posts!!!
+  Create a new Post
   
 </h1>
-
-<form method="POST" enctype="multipart/form-data">
+<section class="sectionComments">
+  <div class="content background">
+<form class="form" method="POST" enctype="multipart/form-data">
   <label for="input-title">Post Title</label>
   <input type="text" name="title" id="input-title" placeholder="Post Title">
   <label for="description">Desciption</label>
   <textarea name="description" id="description" placeholder=" Desciption of the post"></textarea>
   <label for="picture">Picture</label>
-  <input type="file" name="picture" id="picture" accept="image/*" multiple />
+  <input style="font-size:1em"class="asideBtn commentArea" type="file" name="picture" id="picture" accept="image/*" multiple />
   <button>Create Post</button>
 </form>
-
-<aside>
+</div>
+<aside class="asideBar">
   {{>sidebar}}
 </aside>
+</section>
