--- a/views/error/error.hbs
+++ b/views/error/error.hbs
@@ -4,3 +4,4 @@
 <h2>You got an error please try to refresh and if it still continue contact us</h2>
 <h2>dyplay.boardgamehub@gmail.com</h2>
  </div>
+ {{error}}
