--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,12 +15,11 @@
 {{else}}
   <div class="indexText"><img class="indexImg" src="/images/dy play one color.png" alt="logo"></div>
 <div class="map">
-  <h2>Welcome to DYPlay</h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
-    quos repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis
-    eius
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
-    quos
+  <h2 style="font-size:3em">Welcome to DYPlay</h2>
+  <br>
+  <p style="font-size:1.5em; text-align: justify;">DyPlay enters the world with the idea of joining boardgame enthusiasts who want to take their experience to the next level.
+Here you will find people to play all the games ever made, forums to discuss tactics, new rules, upcoming games and whatever your dice mind is cooking.
+Join us and enjoy this world of phantasy that we are creating with you!
   </p>
 
 </div>
