--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -306,4 +306,36 @@ h3 {
     justify-items: center;
     width: 300px; }
 
+.form {
+  display: flex;
+  flex-direction: column; }
+  .form input {
+    width: 100%;
+    background-color: rgba(179, 179, 179, 0.11);
+    color: white; }
+  .form textarea {
+    width: 100%;
+    background-color: rgba(179, 179, 179, 0.11);
+    color: white; }
+  .form label {
+    margin-top: 30px;
+    padding-top: 10px;
+    color: #ff33ff;
+    font-size: 1.5em; }
+  .form button {
+    margin-top: 30px;
+    background: inherit;
+    color: #ff33ff;
+    border: 5px solid #ff33ff;
+    border-radius: 15px;
+    padding: 5;
+    font-style: none;
+    outline: inherit;
+    font-size: 1em;
+    margin-bottom: 25px; }
+  .form button:hover {
+    transform: scale(1.05) perspective(1px);
+    transition-timing-function: ease-out;
+    color: #ff33ff; }
+
 /*# sourceMappingURL=style.css.map */
