--- a/views/channels/posts/edit.hbs
+++ b/views/channels/posts/edit.hbs
@@ -1,20 +1,22 @@
 <h1>
-This page is to edit a post!!
+Edit {{post.title}}
 
 </h1>
-
+<section class="sectionComments">
+   <div class="content background">
 {{#with post}}
-<form method="POST" enctype="multipart/form-data">
+<form class="form" method="POST" enctype="multipart/form-data">
   <label for="input-title">Post Title</label>
   <input type="text" name="title" id="input-title" value="{{title}}">
   <label for="description">Desciption</label>
   <textarea name="description" id="description">{{description}}</textarea>
   <label for="picture">Picture</label>
-  <input type="file" name="picture" id="picture" accept="image/*" multiple />
+  <input style="font-size:1em"class="asideBtn commentArea" type="file" name="picture" id="picture" accept="image/*" multiple />
   <button>Edit Post</button>
 </form>
 {{/with}}
-
-<aside>
+</div>
+<aside class="asideBar">
   {{>sidebar}}
 </aside>
+</section>
