--- a/views/userPublic.hbs
+++ b/views/userPublic.hbs
@@ -1,24 +1,24 @@
 <section class="sectionComments">
 
   <div class="content">
-    <h1>{{user.name}}'s Profile</h1>
+    <h1>{{userdata.name}}'s Profile</h1>
 
     <div class="map sectionComments">
-      <img src="{{user.picture}}" alt="profile picture" style="max-width: 40%; margin: 2.5% auto">
+      <img src="{{userdata.picture}}" alt="profile picture" style="max-width: 40%; margin: 2.5% auto">
     </div>
 
     <div class="map sectionComments">
       <div>
         <h3>Favorite games:</h3>
-        <p>{{user.games}}.</p>
+        <p>{{userdata.games}}.</p>
         <h3>About you:</h3>
-        <p>{{user.description}}</p>
+        <p>{{userdata.description}}</p>
       </div>
     </div>
 
   </div>
 
-<aside class="asideBar">
-  {{> sidebar}}
-</aside>
+  <aside class="asideBar">
+    {{>sidebar}}
+  </aside>
 </section>
