before hbs date helper

--- a/views/encounter/create.hbs
+++ b/views/encounter/create.hbs
@@ -18,7 +18,7 @@
     
     <div style="margin-bottom: 2.5%;">
       <label class="aAuthor" for="date"> Event Date </label>
-      <input class="commentArea" type="datetime-local" name='date' id='date' required>
+      <input class="commentArea" type="datetime" name='date' id='date' required>
     </div>
 
     <div style="margin-bottom: 2.5%;">
