post and channels

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -110,7 +110,15 @@ h3 {
   justify-self: center;
   align-self: center;
   font-size: 1.5em;
-  height: 500px; }
+  text-align: justify;
+  align-items: center;
+  align-content: center; }
+  .channelDesc img {
+    margin-bottom: 50px;
+    margin-left: 15px;
+    align-content: center;
+    max-width: 1050px;
+    max-height: 500px; }
 
 .channelProp {
   margin: 1em;
@@ -140,9 +148,9 @@ h3 {
   width: 96%;
   height: 85%;
   border-radius: 20px; }
-  .inImage h2 {
+  .inImage h4 {
     word-break: break-word;
-    font-size: 3em;
+    font-size: 1.5em;
     margin-bottom: 20px; }
 
 .channelImg {
@@ -224,7 +232,8 @@ h3 {
   border-radius: 0 20px 20px 0;
   margin-right: 50px;
   margin-left: 0;
-  flex-grow: 1; }
+  flex-grow: 1;
+  flex-wrap: wrap; }
 
 .deleteBtn {
   background: none;
@@ -337,5 +346,12 @@ h3 {
     transform: scale(1.05) perspective(1px);
     transition-timing-function: ease-out;
     color: #ff33ff; }
+
+.configuration {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: justify;
+  align-items: center; }
 
 /*# sourceMappingURL=style.css.map */
