--- a/views/channels/posts/singlepost.hbs
+++ b/views/channels/posts/singlepost.hbs
@@ -7,8 +7,11 @@
 
 <aside class="channelDesc">
 {{#with post}}
-<aside style="background-image:url({{picture}});height: 300px; background-repeat: no-repeat; background-size: cover; justify-content: center;">
-<div class="inImage">
+<aside>
+<div>
+{{#if picture}}
+<img src="{{picture}}" alt="post piture">
+{{/if}}
 <h4>{{description}}</h4>
 </aside>
 {{/with}}
