--- a/views/channels/singleview.hbs
+++ b/views/channels/singleview.hbs
@@ -7,8 +7,12 @@
 
 <aside class= "channelDesc">
 {{#with channel}}
-<aside style="background-image:url({{picture}}); height: 300px; background-repeat: no-repeat; background-size: cover; justify-content: center; ">
-<div class="inImage">
+<aside>
+<div>
+{{#if picture}}
+<img src="{{picture}}" alt="channel piture">
+{{/if}} 
+
 <h4>{{description}}</h4>
 </aside>
 {{/with}}
@@ -30,7 +34,9 @@
 {{/each}}
 
 </div>
+
 <div>
+  
   <aside class="asideBar">
 <a href="/channels/{{channel._id}}/create_post"><button class="asideBtn">Create a new Post</button></a>
 {{>sidebar}}
