date helper event and single event

--- a/views/encounter/index.hbs
+++ b/views/encounter/index.hbs
@@ -4,7 +4,7 @@
 {{#each encounters}}
 <a href="/encounter/single/{{ _id }}" style="text-decoration: none">
 <aside class="channelProp">
-<p>{{eventName}}, number of player: {{numberOfPlayer}}</p><p>{{date}}</p>
+<p>{{eventName}}, number of player: {{numberOfPlayer}}</p><p>{{date "dddd, DD - MMM - YYYY HH:mm"}}</p>
 </aside></a>
 {{/each}}
 </div>
