message link on layout

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,7 @@
     </div>
 
     <aside>
+    <a href="/message"> Messages </a>
     <a href="/channels"> Channels </a>
     <a href="/encounter"> Encounter </a>
     {{#if user}}
