Author in posts

--- a/views/channels/posts/singlepost.hbs
+++ b/views/channels/posts/singlepost.hbs
@@ -12,7 +12,9 @@
 {{#if picture}}
 <img src="{{picture}}" alt="post piture">
 {{/if}}
+<h5>Author: <a class="aAuthor" href="/profile/{{ author._id }}">{{ author.name }}</a></h5>
 <h4>{{description}}</h4>
+
 </aside>
 {{/with}}
 <div>
