about us error correction

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -55,7 +55,7 @@
     
     <div>
       <h6>About Us</h6>
-      <p>Boardgame funs that met at IronHack and developed the future encounter site for gamers</p></div>
+      <p>Boardgame fans that met at IronHack and developed the future encounter site for gamers</p></div>
       </footer>
   <script src="/scripts/script.js"></script>
 </body>
